--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,12 @@
   "author": "Gaurav",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.12.1",
     "nodemon": "^3.1.9"
   }
-  
 }
