--- a/frontend/blog-app/package.json
+++ b/frontend/blog-app/package.json
@@ -2,12 +2,12 @@
   "name": "blog-app",
   "version": "0.1.0",
   "private": true,
- 
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1"
   },
